Add api functionality, countries

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,10 @@ body {
   margin: 20px auto;
 }
 
+.tableContainer {
+  margin: 20px 0;
+}
+
 /* Absolute Center CSS Spinner */
 .loading {
     position: fixed;
